# PodlingsMCP

./: .coverage  AGENTS.md  Makefile  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: architecture.md
podlings/: __init__.py  data.py  protocol.py  schemas.py  tools.py
tests/: __init__.py  fixtures.py  test_data.py  test_mcp_integration.py  test_protocol.py  test_tools.py
tests/fixtures/: sample-podlings.xml
