[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-podlings-mcp"
version = "0.1.0"
description = "MCP server for querying Apache Incubator podlings.xml data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["apache", "incubator", "mcp", "podlings"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
podlings-mcp = "podlings.protocol:main"
apache-podlings-mcp = "podlings.protocol:main"

[project.optional-dependencies]
test = [
  "coverage>=7.0.0",
]
dev = [
  "coverage>=7.0.0",
  "mypy>=1.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["podlings*"]

[tool.setuptools.package-data]
podlings = ["py.typed"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
